[tool.poetry]
name = "guided super resolution"
version = "0.1.0"
description = ""
authors = ["Viraj Shah <viraj.shah2021@vitstudent.ac.in>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
numpy = "^2.0.0"
einops = "^0.8.0"
pywavelets = "^1.6.0"
matplotlib = "^3.9.0"
pytorch-wavelets = "^1.3.0"
setuptools = "^70.2.0"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
tqdm = "^4.66.4"
opencv-python = "^4.10.0.84"
timm = "^1.0.7"
tensorboard = "^2.17.1"
scipy = "^1.14.0"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.27.0"

[tool.poe.tasks]
torch_rocm_install = "pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
